--- a/TouristAssist/app/src/main/res/drawable/side_nav_bar.xml
+++ b/TouristAssist/app/src/main/res/drawable/side_nav_bar.xml
@@ -2,8 +2,8 @@
     android:shape="rectangle">
     <gradient
         android:angle="135"
-        android:centerColor="#4CAF50"
-        android:endColor="#2E7D32"
-        android:startColor="#81C784"
+        android:centerColor="#c26464"
+        android:endColor="#580407"
+        android:startColor="#f55050"
         android:type="linear" />
 </shape>
