--- a/TouristAssist/app/src/main/res/layout/content_main_navigation.xml
+++ b/TouristAssist/app/src/main/res/layout/content_main_navigation.xml
@@ -8,6 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/navbackground"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.cs442.faaltene.touristassist.MainNavigation"
     tools:showIn="@layout/app_bar_main_navigation">
