--- a/TouristAssist/app/src/main/res/layout/content_main_screen.xml
+++ b/TouristAssist/app/src/main/res/layout/content_main_screen.xml
@@ -18,7 +18,7 @@
         android:layout_height="wrap_content"
         android:hint="Enter City"
         android:textColor="@color/colorPrimary"
-        android:id="@+id/editText"
+        android:id="@+id/cityName"
         android:layout_marginTop="131dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
@@ -26,8 +26,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Submit"
-        android:id="@+id/button"
+        android:id="@+id/submit"
         android:layout_alignParentBottom="true"
-        android:layout_alignStart="@+id/editText"
+        android:layout_alignStart="@+id/cityName"
         android:layout_marginBottom="111dp" />
 </RelativeLayout>
