--- a/TouristAssist/app/src/main/res/layout/content_main_screen.xml
+++ b/TouristAssist/app/src/main/res/layout/content_main_screen.xml
@@ -29,7 +29,9 @@
         android:id="@+id/submit"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:theme="@style/MyButton"
+        android:textSize="40dp"
+        android:textColor="#F16020"
+        android:layout_marginBottom="90dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignStart="@+id/cityName"
-        android:layout_marginBottom="111dp" />
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
