--- a/TouristAssist/app/src/main/res/menu/activity_main_navigation_drawer.xml
+++ b/TouristAssist/app/src/main/res/menu/activity_main_navigation_drawer.xml
@@ -26,6 +26,10 @@
             android:id="@+id/nav_museum"
             android:icon="@drawable/museum"
             android:title="Museum" />
+        <item
+            android:id="@+id/nav_shows"
+            android:icon="@drawable/ic_local_movies_24dp"
+            android:title="Show Time" />
     </group>
 
     <item android:title="Communicate">
