--- a/TouristAssist/app/src/main/res/layout/fragment_museum_frag.xml
+++ b/TouristAssist/app/src/main/res/layout/fragment_museum_frag.xml
@@ -2,12 +2,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/navbackground"
     tools:context="com.cs442.faaltene.touristassist.museum_frag">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+
 
 </FrameLayout>
