--- a/TouristAssist/app/src/main/res/layout/activity_main_navigation.xml
+++ b/TouristAssist/app/src/main/res/layout/activity_main_navigation.xml
@@ -8,10 +8,24 @@
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
 
-    <include
-        layout="@layout/app_bar_main_navigation"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <!-- The ActionBar displayed at the top -->
+        <include
+            layout="@layout/app_bar_main_navigation"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <!-- The main content view where fragments are loaded -->
+        <FrameLayout
+            android:id="@+id/content_frame"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </LinearLayout>
+
 
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
