--- a/TouristAssist/app/src/main/res/layout/nav_header_main_navigation.xml
+++ b/TouristAssist/app/src/main/res/layout/nav_header_main_navigation.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
-    android:background="@drawable/side_nav_bar"
+    android:background="@drawable/navbackground"
     android:gravity="bottom"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -11,12 +11,6 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="221dp"
-        android:layout_height="87dp"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:src="@drawable/navlogo" />
 
     <TextView
         android:layout_width="match_parent"
