Fragments and Navigation Drawer done

--- a/TouristAssist/app/src/main/res/layout/fragment_hospital_frag.xml
+++ b/TouristAssist/app/src/main/res/layout/fragment_hospital_frag.xml
@@ -6,6 +6,10 @@
     tools:context="com.cs442.faaltene.touristassist.hospital_frag">
 
     <!-- TODO: Update blank fragment layout -->
-
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/hospital_list"
+        android:layout_gravity="left|top" />
 
 </FrameLayout>
