--- a/TouristAssist/app/src/main/res/layout/fragment_bar_frag.xml
+++ b/TouristAssist/app/src/main/res/layout/fragment_bar_frag.xml
@@ -8,4 +8,9 @@
     <!-- TODO: Update blank fragment layout -->
 
 
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/bar_list"
+        android:layout_gravity="left|top" />
 </FrameLayout>
