--- a/TouristAssist/app/src/main/res/layout/content_main_navigation.xml
+++ b/TouristAssist/app/src/main/res/layout/content_main_navigation.xml
@@ -12,5 +12,14 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.cs442.faaltene.touristassist.MainNavigation"
     tools:showIn="@layout/app_bar_main_navigation">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/citytv"
+        android:textSize="40dp"
+        android:text="City"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="132dp" />
 
 </RelativeLayout>
