--- a/TouristAssist/app/src/main/res/layout/fragment_bar_frag.xml
+++ b/TouristAssist/app/src/main/res/layout/fragment_bar_frag.xml
@@ -10,7 +10,7 @@
 
     <ListView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/bar_list"
-        android:layout_gravity="left|top" />
+        android:layout_height="386dp"
+        android:layout_gravity="center_vertical|left"
+        android:id="@+id/bar_list" />
 </FrameLayout>
