--- a/TouristAssist/app/src/main/res/layout/fragment_mall_frag.xml
+++ b/TouristAssist/app/src/main/res/layout/fragment_mall_frag.xml
@@ -8,8 +8,9 @@
     <!-- TODO: Update blank fragment layout -->
     <ListView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="386dp"
+        android:layout_gravity="center_vertical|left"
         android:id="@+id/mall_list"
-        android:layout_gravity="left|top" />
+         />
 
 </FrameLayout>
