--- a/TouristAssist/app/src/main/res/layout/fragment_show_frag.xml
+++ b/TouristAssist/app/src/main/res/layout/fragment_show_frag.xml
@@ -8,7 +8,7 @@
     <!-- TODO: Update* blank fragment layout -->
     <ListView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="386dp"
         android:id="@+id/show_list"
-        android:layout_gravity="left|top" />
+        android:layout_gravity="center_vertical|left" />
 </FrameLayout>
