--- a/TouristAssist/app/src/main/res/layout/content_restaurant_detail.xml
+++ b/TouristAssist/app/src/main/res/layout/content_restaurant_detail.xml
@@ -43,6 +43,17 @@
         android:text="Restaurant Cuisine"
         android:layout_alignTop="@+id/rCuitv"
         android:layout_toEndOf="@+id/rad" />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/rlistlay"
+        android:layout_below="@id/rCuitv">
+        <ListView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/rrev"></ListView>
+    </LinearLayout>
+
 
 
 </RelativeLayout>
