--- a/TouristAssist/app/src/main/res/layout/content_mall_detail.xml
+++ b/TouristAssist/app/src/main/res/layout/content_mall_detail.xml
@@ -4,56 +4,70 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/navbackground"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.cs442.faaltene.touristassist.Restaurant_detail"
-    tools:showIn="@layout/activity_restaurant_detail">
+    tools:context="com.cs442.faaltene.touristassist.Mall_detail"
+    tools:showIn="@layout/activity_mall_detail">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/mname"
+        android:text="Mall Name"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/mad"
+        android:text="Mall Address"
+        android:layout_below="@+id/mname"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/minfo"
+        android:text="Mall Info"
+        android:layout_below="@+id/mad"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/mBtv"
+        android:text="Mall Brands"
+        android:layout_below="@+id/minfo"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/mB"
+        android:text="Mall Brands"
+        android:layout_below="@+id/mBtv"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/mStv"
+        android:text="Mall Brands"
+        android:layout_below="@+id/mB"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/mS"
+        android:text="Mall Brands"
+        android:layout_below="@+id/mStv"/>
 
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/rname"
-        android:text="Restaurant Name"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/rad"
-        android:text="Restaurant Address"
-        android:layout_below="@+id/rname"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/rinfo"
-        android:text="Restaurant Info"
-        android:layout_below="@+id/rad"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/rCuitv"
-        android:text="Restaurant Cuisine"
-        android:layout_below="@+id/rinfo"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/rCui"
-        android:text="Restaurant Cuisine"
-        android:layout_alignTop="@+id/rCuitv"
-        android:layout_toEndOf="@+id/rad" />
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/rlistlay"
-        android:layout_below="@id/rCuitv"
+        android:layout_below="@id/mS"
         android:layout_marginTop="40dp">
         <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="403dp"
-        android:id="@+id/rrev"></ListView>
+            android:layout_width="wrap_content"
+            android:layout_height="365dp"
+            android:id="@+id/mrev"></ListView>
     </LinearLayout>
+
 
 
 
