--- a/TouristAssist/app/src/main/res/layout/content_mall_detail.xml
+++ b/TouristAssist/app/src/main/res/layout/content_mall_detail.xml
@@ -40,7 +40,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/mB"
-        android:text="Mall Brands"
+        android:text="Mall Stores"
         android:layout_below="@+id/mBtv"/>
     <TextView
         android:layout_width="wrap_content"
