--- a/TouristAssist/app/src/main/res/layout/activity_main_navigation.xml
+++ b/TouristAssist/app/src/main/res/layout/activity_main_navigation.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    android:orientation="vertical">
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -37,3 +44,4 @@
         app:menu="@menu/activity_main_navigation_drawer" />
 
 </android.support.v4.widget.DrawerLayout>
+</LinearLayout>
