--- a/TouristAssist/app/src/main/res/menu/activity_main_navigation_drawer.xml
+++ b/TouristAssist/app/src/main/res/menu/activity_main_navigation_drawer.xml
@@ -25,7 +25,7 @@
         <item
             android:id="@+id/nav_museum"
             android:icon="@drawable/museum"
-            android:title="Museum" />
+            android:title="Attraction" />
         <item
             android:id="@+id/nav_shows"
             android:icon="@drawable/ic_local_movies_24dp"
