--- a/TouristAssist/app/src/main/res/layout/list_item.xml
+++ b/TouristAssist/app/src/main/res/layout/list_item.xml
@@ -11,7 +11,7 @@
         android:textSize="17dip"
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
-        android:textColor="#000000"
+        android:textColor="@color/colorPrimary"
         android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft" />
     <TextView
         android:id="@+id/review"
