--- a/TouristAssist/app/src/main/res/menu/activity_main_navigation_drawer.xml
+++ b/TouristAssist/app/src/main/res/menu/activity_main_navigation_drawer.xml
@@ -32,16 +32,16 @@
             android:title="Show Time" />
     </group>
 
-    <item android:title="Communicate">
+    <item android:title="Other Options">
         <menu>
             <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
+                android:id="@+id/nav_home"
+                android:icon="@drawable/ic_home"
+                android:title="Home" />
             <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
+                android:id="@+id/nav_exit"
+                android:icon="@drawable/ic_cancel"
+                android:title="Exit" />
         </menu>
     </item>
 
