--- a/TouristAssist/app/src/main/res/layout/content_hotel_detail.xml
+++ b/TouristAssist/app/src/main/res/layout/content_hotel_detail.xml
@@ -37,13 +37,18 @@
         android:text="Hotel Info"
         android:layout_below="@+id/had"/>
 
-
+    <Button xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/button_add_review"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/hinfo"
+        android:text="Add Review" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/rlistlay"
-        android:layout_below="@id/hinfo"
+        android:layout_below="@id/button_add_review"
         android:layout_marginTop="40dp">
         <ListView
             android:layout_width="wrap_content"
