--- a/TouristAssist/app/src/main/res/layout/content_mall_detail.xml
+++ b/TouristAssist/app/src/main/res/layout/content_mall_detail.xml
@@ -70,11 +70,18 @@
         android:layout_below="@+id/mStv"/>
 
 
+    <Button xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/button_add_review"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/mS"
+        android:text="Add Review" />
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/rlistlay"
-        android:layout_below="@id/mS"
+        android:layout_below="@id/button_add_review"
         android:layout_marginTop="40dp">
         <ListView
             android:layout_width="wrap_content"
