--- a/TouristAssist/app/src/main/res/layout/content_restaurant_detail.xml
+++ b/TouristAssist/app/src/main/res/layout/content_restaurant_detail.xml
@@ -55,11 +55,19 @@
         android:textColor="@color/colorPrimary"
         android:text="Restaurant Cuisine"
         android:layout_below="@+id/rCuitv"/>
+
+    <Button xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/button_add_review"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/rCui"
+        android:text="Add Review" />
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/rlistlay"
-        android:layout_below="@id/rCui"
+        android:layout_below="@id/button_add_review"
         android:layout_marginTop="40dp">
         <ListView
         android:layout_width="wrap_content"
