--- a/TouristAssist/app/src/main/res/layout/content_show_detail.xml
+++ b/TouristAssist/app/src/main/res/layout/content_show_detail.xml
@@ -52,14 +52,18 @@
         android:textColor="@color/colorPrimaryDark"
         android:text="Show Time Shows"
         android:layout_below="@+id/sdur"/>
-
-
+    <Button xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/button_add_review"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/sshows"
+        android:text="Add Review" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/rlistlay"
-        android:layout_below="@id/sshows"
+        android:layout_below="@id/button_add_review"
         android:layout_marginTop="40dp">
         <ListView
             android:layout_width="wrap_content"
