--- a/TouristAssist/app/src/main/res/layout/content_bar_detail.xml
+++ b/TouristAssist/app/src/main/res/layout/content_bar_detail.xml
@@ -49,13 +49,16 @@
         android:textColor="@color/colorPrimary"
         android:text="Bar Disco"
         android:layout_below="@+id/bDiscotv"/>
-
-    <Button xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/button_add_review"
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Add Review"
+        android:id="@+id/button_add_review"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:theme="@style/MyButton"
         android:layout_below="@id/bDisco"
-        android:text="Add Review" />
+        android:textColor="@color/colorPrimary" />
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
