--- a/TouristAssist/app/src/main/res/layout/content_hospital_detail.xml
+++ b/TouristAssist/app/src/main/res/layout/content_hospital_detail.xml
@@ -50,12 +50,15 @@
         android:textColor="@color/colorPrimary"
         android:text="Hospital Specializations"
         android:layout_below="@+id/hSpectv"/>
-    <Button xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/button_add_review"
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Add Review"
+        android:id="@+id/button_add_review"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:theme="@style/MyButton"
         android:layout_below="@id/hSpec"
-        android:text="Add Review" />
+        android:textColor="@color/colorPrimary" />
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
