--- a/TouristAssist/app/src/main/res/layout/content_museum_detail.xml
+++ b/TouristAssist/app/src/main/res/layout/content_museum_detail.xml
@@ -48,12 +48,15 @@
         android:id="@+id/aFee"
         android:text="Attraction Fee"
         android:layout_below="@+id/aFeetv"/>
-    <Button xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/button_add_review"
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Add Review"
+        android:id="@+id/button_add_review"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:theme="@style/MyButton"
         android:layout_below="@id/aFee"
-        android:text="Add Review" />
+        android:textColor="@color/colorPrimary" />
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
