--- a/TouristAssist/app/src/main/res/layout/content_show_detail.xml
+++ b/TouristAssist/app/src/main/res/layout/content_show_detail.xml
@@ -52,12 +52,15 @@
         android:textColor="@color/colorPrimaryDark"
         android:text="Show Time Shows"
         android:layout_below="@+id/sdur"/>
-    <Button xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/button_add_review"
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Add Review"
+        android:id="@+id/button_add_review"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:theme="@style/MyButton"
         android:layout_below="@id/sshows"
-        android:text="Add Review" />
+        android:textColor="@color/colorPrimary" />
 
     <LinearLayout
         android:layout_width="wrap_content"
