--- a/TouristAssist/app/src/main/res/layout/content_bar_detail.xml
+++ b/TouristAssist/app/src/main/res/layout/content_bar_detail.xml
@@ -56,6 +56,7 @@
         android:id="@+id/button_add_review"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:theme="@style/MyButton"
+        android:textSize="20dp"
         android:layout_below="@id/bDisco"
         android:textColor="@color/colorPrimary" />
 
