--- a/TouristAssist/app/src/main/res/layout/content_hospital_detail.xml
+++ b/TouristAssist/app/src/main/res/layout/content_hospital_detail.xml
@@ -58,6 +58,7 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:theme="@style/MyButton"
         android:layout_below="@id/hSpec"
+        android:textSize="20dp"
         android:textColor="@color/colorPrimary" />
     <LinearLayout
         android:layout_width="wrap_content"
