--- a/TouristAssist/app/src/main/res/layout/content_hotel_detail.xml
+++ b/TouristAssist/app/src/main/res/layout/content_hotel_detail.xml
@@ -44,6 +44,7 @@
         android:id="@+id/button_add_review"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:theme="@style/MyButton"
+        android:textSize="20dp"
         android:layout_below="@id/hinfo"
         android:textColor="@color/colorPrimary" />
 
