--- a/TouristAssist/app/src/main/res/layout/content_restaurant_detail.xml
+++ b/TouristAssist/app/src/main/res/layout/content_restaurant_detail.xml
@@ -63,6 +63,7 @@
         android:id="@+id/button_add_review"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:theme="@style/MyButton"
+        android:textSize="20dp"
         android:layout_below="@id/rCui"
         android:textColor="@color/colorPrimary" />
 
