--- a/TouristAssist/app/src/main/res/layout/content_show_detail.xml
+++ b/TouristAssist/app/src/main/res/layout/content_show_detail.xml
@@ -59,6 +59,7 @@
         android:id="@+id/button_add_review"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:theme="@style/MyButton"
+        android:textSize="20dp"
         android:layout_below="@id/sshows"
         android:textColor="@color/colorPrimary" />
 
