--- a/TouristAssist/app/src/main/res/layout/content_bar_detail.xml
+++ b/TouristAssist/app/src/main/res/layout/content_bar_detail.xml
@@ -6,6 +6,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="@drawable/navbackground"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_bar_detail"
     tools:context="com.cs442.faaltene.touristassist.Bar_detail">
@@ -56,9 +57,10 @@
         android:id="@+id/button_add_review"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:theme="@style/MyButton"
-        android:textSize="20dp"
+        android:textSize="30dp"
         android:layout_below="@id/bDisco"
-        android:textColor="@color/colorPrimary" />
+        android:textColor="@color/colorPrimary"
+        android:layout_centerHorizontal="true" />
 
     <LinearLayout
         android:layout_width="wrap_content"
