--- a/TouristAssist/app/src/main/res/layout/content_hospital_detail.xml
+++ b/TouristAssist/app/src/main/res/layout/content_hospital_detail.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
+    android:background="@drawable/navbackground"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
@@ -58,7 +59,8 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:theme="@style/MyButton"
         android:layout_below="@id/hSpec"
-        android:textSize="20dp"
+        android:textSize="30dp"
+        android:layout_centerHorizontal="true"
         android:textColor="@color/colorPrimary" />
     <LinearLayout
         android:layout_width="wrap_content"
