--- a/TouristAssist/app/src/main/res/layout/content_museum_detail.xml
+++ b/TouristAssist/app/src/main/res/layout/content_museum_detail.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:background="@drawable/navbackground"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
@@ -56,7 +57,8 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:theme="@style/MyButton"
         android:layout_below="@id/aFee"
-        android:textSize="20dp"
+        android:textSize="30dp"
+        android:layout_centerHorizontal="true"
         android:textColor="@color/colorPrimary" />
     <LinearLayout
         android:layout_width="wrap_content"
